# XRHeadStreamApp

./: CMakeLists.txt  README.md
Projects/Android/: AndroidManifest.xml  build.gradle  local.properties
Projects/Android/gradle/wrapper/: gradle-wrapper.properties
Src/: main.cpp
java/: MainActivity.java
libPred/: CMakeLists.txt
libPred/include/: linearModelOrientation.hpp  linearModelTranslation.hpp  motionPredictionInterface.hpp  motionPredictionLinearSeparate.hpp  quaternion.hpp  util.hpp
libPred/src/: linearModelOrientation.cpp  linearModelTranslation.cpp  motionPredictionLinearSeparate.cpp  quaternion.cpp  util.cpp
res/values/: ic_launcher_background.xml  strings.xml
